# streamlit-myproject

./: app.py  main.py  pyproject.toml
.streamlit/: config.toml
