[project]
name = "streamlit-myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "olefile>=0.47",
    "openai>=2.43.0",
    "pypdf>=6.13.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
